k8s/bank-ingress-protected.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress-protected
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/plugins: jwt-auth,rate-limit
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: /transfers
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 80
