k8s/bank-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress-public
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/plugins: rate-limit
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
